Modified the css part

--- a/chettinadu.html
+++ b/chettinadu.html
@@ -8,9 +8,9 @@
     <body>
         <div class="flex box">          
             <div class="heading box">
-                <div class="left box"><img src="resources/heading.jpg"/></div>
+                <div class="left box"><img src="resources/heading.jpg" style="object-fit: contain;"/></div>
                 <div class="left box"><h1>GUT-GULLIE</h1></div>
-                <div class="right box"><a href="cart.html"><h4>CART</h4></a></div>
+                <div class="right box"><a href="cart.html" style="color: rgba(43, 145, 6);;"><i class="fas fa-shopping-cart"></i></a></div>
             </div>
             <div class="flexbox box clear" id="seconddiv">
                 <div class="hover" id="image1"><img src=" resources/rest1.jpg"/></div>
