--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
         <link href="https://fonts.googleapis.com/css2?family=Caladea:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css"> 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     </head>
     <body>
         <div class="flex box">          
             <div class="heading box">
-                <div class="left box"><img src="resources/heading.jpg"/></div>
+                <div class="left box"><img src="resources/heading.jpg" style="object-fit: contain;"/></div>
                 <div class="left box"><h1>GUT-GULLIE</h1></div>
-                <div class="right box"><a href="cart.html"><h4>CART</h4></a></div>
+                <div class="right box"><a href="cart.html" style="color: rgba(43, 145, 6);;"><i class="fas fa-shopping-cart"></i></a></div>
             </div>
             <div class="flexbox box clear" id="seconddiv">
-                <div class="hover" id="image1"><img src="resources/firstdiv.jpg"/></div>
+                <div class="hover" id="image1"><img src="resources/firstdiv.jpg"/ ></div>
                 <div class="hover" id="image2"><img src="resources/firstdiv1.jpg"/></div>
                 <div class="hover" id="image3"><img src="resources/firstdiv2.jpg"/></div>
                <div class="hover" id="image4"><img src="resources/firstdiv3.jpg"/></div>
@@ -21,7 +22,7 @@
             <div ><h2>Restaurents</h2></div>
             <div>
                 <div class="grid box">                    
-                    <div id="rest1" class="box"><a href="chettinadu.html">
+                    <div id="rest1" class="box"><a href="chettinadu.html" class="atag">
                         <div><img src=" resources/rest1.jpg"></div>
                         <div ><h3 >Chettinadu Dhaba</h3></div>
                         <div><p id="chetti">South Indian Dishes</p></div></a>
@@ -37,7 +38,7 @@
                         <div><p>Indo chinese Dishes</p></div></a>
                     </div>
                     <div id="rest4" class="box"><a href="chettinadu.html">
-                        <div><img src=" resources/rest4.jfif"></div>
+                        <div><img src=" resources/rest4.jfif" ></div>
                         <div><h3>Thalapakatti</h3></div>
                         <div><p>South Indian Non-Vegetarian Dishes</p></div></a>
                     </div>
